Тема - ООП. Последние вопросы

--- a/answers/OOP/Имеется выражение "является" и "имеет".md
+++ b/answers/OOP/Имеется выражение "является" и "имеет".md
@@ -20,4 +20,4 @@
 Например
 - Мотоцикл -> сумка с багажём - ассоциация. Отношение "имеет".
 - Мотоцикл -> колесо - композиция.
-- группа по интересам -> человек - фгрегация. Человек часть группы, но может принадлежать нескольким разным группам.
+- группа по интересам -> человек - агрегация. Человек часть группы, но может принадлежать нескольким разным группам.
